<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_dialog_sheet_background"
    tools:context=".presentation.detail.MovieReviewFragment">

    <LinearLayout
        android:id="@+id/llActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/review"
            android:textColor="@color/neutral_dark"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_baseline_clear_24" />
    </LinearLayout>

    <View
        android:id="@+id/viewDividerActionBar"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/gray_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llActionBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovieReview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDividerActionBar"
        tools:listitem="@layout/list_movie_review" />

    <TextView
        android:id="@+id/tvErrorLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failed_to_load_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnErrorLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_retry"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorLoad" />

    <ProgressBar
        android:id="@+id/pbMovieList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/emptyData"
        layout="@layout/empty_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDividerActionBar"
        tools:listitem="@layout/list_movie_review"/>

</androidx.constraintlayout.widget.ConstraintLayout>